--- a/extra_sass/style.css.scss
+++ b/extra_sass/style.css.scss
@@ -103,3 +103,11 @@
   }
 }
 
+/* fix aligned when exported to PDF withmkdocs-material as theme */
+.md-typeset > ul {
+  margin-left: 0rem !important;
+}
+.md-typeset ul li,
+.md-typeset ol li {
+  margin-left: 1.5rem !important;
+}
